2011-01-26      Evgeny V. Kokovikhin

	* main/Utils/FileUtils: makeUniqueLatinName method added

2011-01-24	Evgeny N. Sokolov

	* databases tests: skip, when fail connection, instead fatal

2011-01-19	Evgeny N. Sokolov

	* main/Math/MathUtils.class.php: add compareFloat function

2010-12-08      Evgeny V. Kokovikhin

	* main/Utils/IO/Socket.class.php: try to close socket immediately.
	see: http://ru.php.net/manual/en/function.socket-close.php#66810

2010-12-02	Evgeny V. Kokovikhin

	* meta/classes/MetaConfiguration.class.php: more informative error messages
	at the meta configuration

2010-12-01	Evgeny V. Kokovikhin

	* main/Utils/IO/Socket.class.php: eat exception 
	if we try to close already closed socket

2010-11-11      Evgeny V. Kokovikhin

	* main/DAOs/Workers/CommonDaoWorker.class.php: just change exception message

2010-11-09	Evgeny V. Kokovikhin

	* main/DAOs/Workers/CommonDaoWorker.class.php: human-frendly message in 
	the exception

2010-10-25	Sergey S. Sergeev

	* main/Flow/SimplePhpView.class.php: clear the output buffer
	if exceptions was thrown. Thanks to Alexey Denisov (stalkerxey).

2010-10-06	Evgeny V. Kokovikhin

	* core/Form/Primitives/PrimitiveAlias.class.php: alias for
	PrimitiveEnumeration fixed.
	Thanks to Timofey A. Anisimov.

2010-09-30	Evgeny V. Kokovikhin

	* core/Cache/Memcached.class.php: ability to set TimeOut added.
	Thanks to Alexander A. Klestov.

2010-09-23	Sergey S. Sergeev

	* core/OSQL/FromTable.class.php: fixed no brackets for SQLChain with
	size = 1 in SELECT FROM statements.

2010-08-23	Konstantin V. Arkhipov

	* 1.0.10 released.

2010-07-28	Evgeny V. Kokovikhin

	* core/Base/Assert.class.php: checkScalar() added.
	* core/Form/Primitives/PrimitiveIdentifierList.class.php:
	optional ability to ignore empty values added

2010-06-30	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveFile.class.php:
	{is,enable,disable}CheckUploaded methods added.

2010-06-26	Sergey S. Sergeev

	* core/OSQL/DBTable.class.php: setName() added.
