@@ -137,6 +137,16 @@
 			$this->import($this->string);
 			$this->buildInteger();
 		}
+
+		public function  __sleep()
+		{
+			return array('int');
+		}
+
+		public function  __wakeup()
+		{
+			$this->import(date($this->getFormat(), $this->int));
+		}
 		
 		public function toStamp()
 		{
