@@ -1,6 +1,7 @@
 2011-01-26      Evgeny V. Kokovikhin
 
 	* main/Utils/FileUtils: makeUniqueLatinName method added
+	* core/Base/Date, main/Base/CalendarDay: __sleep and __wakeup method added.
 
 2011-01-24	Evgeny N. Sokolov
 
